--- a/src/main/resources/assets/bloodybranch/lang/en_us.lang
+++ b/src/main/resources/assets/bloodybranch/lang/en_us.lang
@@ -9,7 +9,7 @@ item.contract_copper.name=Copper contract
 item.contract_tin.name=Tin contract
 item.contract_silver.name=Silver contract
 item.contract_lead.name=Lead contract
-item.contract_nikel.name=Nikel contract
+item.contract_nickel.name=Nickel contract
 item.contract_aluminium.name=Aluminium contract
 item.contract_platinum.name=Platinum contract
 item.matrix_empty.name=Empty matrix
@@ -19,7 +19,7 @@ item.matrix_copper.name=Copper matrix
 item.matrix_tin.name=Tin matrix
 item.matrix_silver.name=Silver matrix
 item.matrix_lead.name=Lead matrix
-item.matrix_nikel.name=Nikel matrix
+item.matrix_nickel.name=Nickel matrix
 item.matrix_aluminium.name=Aluminium matrix
 item.matrix_platinum.name=Platinum matrix
 item.element_of_air.name=Element of air
@@ -92,7 +92,7 @@ desc.iron_matrix=§dFill with blood to get §biron ingot
 desc.gold_matrix=§dFill with blood to get §bgold ingot
 desc.copper_matrix=§dFill with blood to get §bcopper ingot
 desc.tin_matrix=§dFill with blood to get §btin ingot
-desc.nikel_matrix=§dFill with blood to get §bnikel ingot
+desc.nickel_matrix=§dFill with blood to get §bncikel ingot
 desc.lead_matrix=§dFill with blood to get §blead ingot
 desc.silver_matrix=§dFill with blood to get §bsilver ingot
 desc.aluminium_matrix=§dFill with blood to get §baluminium ingot
