--- a/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
+++ b/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
@@ -9,7 +9,7 @@ item.contract_copper.name=Медный контракт
 item.contract_tin.name=Оловянный контракт
 item.contract_silver.name=Серебрянный контракт
 item.contract_lead.name=Свинцовый контракт
-item.contract_nikel.name=Никелевый контракт
+item.contract_nickel.name=Никелевый контракт
 item.contract_aluminium.name=Алюминиевый контракт
 item.contract_platinum.name=Платиновый контракт
 item.matrix_empty.name=Пустая матрица
@@ -19,7 +19,7 @@ item.matrix_copper.name=Медная матрица
 item.matrix_tin.name=Оловянная матрица
 item.matrix_silver.name=Серебрянная матрица
 item.matrix_lead.name=Свиноцовая матрица
-item.matrix_nikel.name=Никелевая матрица
+item.matrix_nickel.name=Никелевая матрица
 item.matrix_aluminium.name=Алюминиевая матрица
 item.matrix_platinum.name=Платиновая матрица
 item.element_of_air.name=Элемент воздуха
