--- a/src/main/resources/assets/bloodybranch/lang/en_us.lang
+++ b/src/main/resources/assets/bloodybranch/lang/en_us.lang
@@ -39,7 +39,7 @@ item.spawnstone_unfilled.name=Unfilled scroll of summon
 item.spawnstone_blank.name=Scroll of summon: Blank
 item.spawnstone_zombie.name=Scroll of summon: Zombie
 item.spawnstone_skeleton.name=Scroll of summon: Skeleton
-item.spawnstone_wither_skeleton.name=Scroll of summon: Wtiher-skeleton
+item.spawnstone_wither_skeleton.name=Scroll of summon: Wither-skeleton
 item.spawnstone_spider.name=Scroll of summon: Spider
 item.spawnstone_slime.name=Scroll of summon: Slime
 item.spawnstone_magmacube.name=Scroll of summon: Magma cube
@@ -76,8 +76,8 @@ desc.copper_contract1=§dCombine with empty matrix
 desc.copper_contract2=§bHas 64 durability
 desc.tin_contract1=§dCombine with empty matrix
 desc.tin_contract2=§bHas 64 durability
-desc.nikel_contract1=§dCombine with empty matrix
-desc.nikel_contract2=§bHas 64 durability
+desc.nickel_contract1=§dCombine with empty matrix
+desc.nickel_contract2=§bHas 64 durability
 desc.lead_contract1=§dCombine with empty matrix
 desc.lead_contract2=§bHas 64 durability
 desc.silver_contract1=§dCombine with empty matrix
@@ -86,13 +86,13 @@ desc.aluminium_contract1=§dCombine with empty matrix
 desc.aluminium_contract2=§bHas 64 durability
 desc.platinum_contract1=§dCombine with empty matrix
 desc.platinum_contract2=§bHas 16 durability
-desc.blank_contract=§dCombine with items on alchemy table to get resourse contract
-desc.empty_matrix=§dCombine with resourse contract
+desc.blank_contract=§dCombine with items on alchemy table to get resource contract
+desc.empty_matrix=§dCombine with resource contract
 desc.iron_matrix=§dFill with blood to get §biron ingot
 desc.gold_matrix=§dFill with blood to get §bgold ingot
 desc.copper_matrix=§dFill with blood to get §bcopper ingot
 desc.tin_matrix=§dFill with blood to get §btin ingot
-desc.nickel_matrix=§dFill with blood to get §bncikel ingot
+desc.nickel_matrix=§dFill with blood to get §bnickel ingot
 desc.lead_matrix=§dFill with blood to get §blead ingot
 desc.silver_matrix=§dFill with blood to get §bsilver ingot
 desc.aluminium_matrix=§dFill with blood to get §baluminium ingot
