--- a/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
+++ b/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
@@ -76,8 +76,8 @@ desc.copper_contract1=§dОбъедините с пустой матрицей
 desc.copper_contract2=§bИмеет 64 прочности
 desc.tin_contract1=§dОбъедините с пустой матрицей
 desc.tin_contract2=§bИмеет 64 прочности
-desc.nikel_contract1=§dОбъедините с пустой матрицей
-desc.nikel_contract2=§bИмеет 64 прочности
+desc.nickel_contract1=§dОбъедините с пустой матрицей
+desc.nickel_contract2=§bИмеет 64 прочности
 desc.lead_contract1=§dОбъедините с пустой матрицей
 desc.lead_contract2=§bИмеет 64 прочности
 desc.silver_contract1=§dОбъедините с пустой матрицей
@@ -92,7 +92,7 @@ desc.iron_matrix=§dНаполните кровью, чтобы получить
 desc.gold_matrix=§dНаполните кровью, чтобы получить §bзолотой слиток
 desc.copper_matrix=§dНаполните кровью, чтобы получить §bмедный слиток
 desc.tin_matrix=§dНаполните кровью, чтобы получить §bоловянный слиток
-desc.nikel_matrix=§dНаполните кровью, чтобы получить §bникелевый слиток
+desc.nickel_matrix=§dНаполните кровью, чтобы получить §bникелевый слиток
 desc.lead_matrix=§dНаполните кровью, чтобы получить §bсвинцовый слиток
 desc.silver_matrix=§dНаполните кровью, чтобы получить §bсеребряный слиток
 desc.aluminium_matrix=§dНаполните кровью, чтобы получить §bалюминиевый слиток
