--- a/src/main/resources/assets/bloodybranch/lang/en_us.lang
+++ b/src/main/resources/assets/bloodybranch/lang/en_us.lang
@@ -147,6 +147,6 @@ desc.spawnstone_chicken=§dPlace in the barrel with §blife essence§d, to summo
 desc.spawnstone_ocelot=§dPlace in the barrel with §blife essence§d, to summon: §6Ocelot
 desc.spawnstone_mooshroom=§dPlace in the barrel with §blife essence§d, to summon: §6Mooshroom
 desc.spawnstone_parrot=§dPlace in the barrel with §blife essence§d, to summon: §6Parrot
-desc.bottleblood_lesser=§dRight click to fill blood altar with 1000 LP
-desc.bottleblood_medium=§dRight click to fill blood altar with 3000 LP
-desc.bottleblood_large=§dRight click to fill blood altar with 5000 LP
+desc.bottleblood_lesser=§dRight click to fill blood altar with §61000 §dLP
+desc.bottleblood_medium=§dRight click to fill blood altar with §63000 §dLP
+desc.bottleblood_large=§dRight click to fill blood altar with §65000 §dLP
