--- a/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
+++ b/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
@@ -147,6 +147,6 @@ desc.spawnstone_chicken=§dПоместите в бочку с §bжизненн
 desc.spawnstone_ocelot=§dПоместите в бочку с §bжизненной эссенцией§d, чтобы призвать: §6Оцелот
 desc.spawnstone_mooshroom=§dПоместите в бочку с §bжизненной эссенцией§d, чтобы призвать: §6Муухомор
 desc.spawnstone_parrot=§dПоместите в бочку с §bжизненной эссенцией§d, чтобы призвать: §6Попугай
-desc.bottleblood_lesser=§dПКМ по кровавому алтарю, чтобы наполнить его на 1000 LP
-desc.bottleblood_medium=§dПКМ по кровавому алтарю, чтобы наполнить его на 3000 LP
-desc.bottleblood_large=§dПКМ по кровавому алтарю, чтобы наполнить его на 5000 LP
+desc.bottleblood_lesser=§dПКМ по кровавому алтарю, чтобы наполнить его на §61000 §dLP
+desc.bottleblood_medium=§dПКМ по кровавому алтарю, чтобы наполнить его на §63000 §dLP
+desc.bottleblood_large=§dПКМ по кровавому алтарю, чтобы наполнить его на §65000 §dLP
