--- a/src/main/resources/assets/bloodybranch/lang/en_us.lang
+++ b/src/main/resources/assets/bloodybranch/lang/en_us.lang
@@ -9,73 +9,81 @@ itemGroup.bloody_branch=Bloody Branch
 # ===: Items :=== #
 ###################
 
-item.matrix_chard.name=Matrix chard
-item.lava_core.name=Lava core
-item.bloody_branch.name=Bloody branch
-item.contract_blank.name=Blank contract
-item.contract_iron.name=Iron contract
-item.contract_gold.name=Gold contract
-item.contract_copper.name=Copper contract
-item.contract_tin.name=Tin contract
-item.contract_silver.name=Silver contract
-item.contract_lead.name=Lead contract
-item.contract_nickel.name=Nickel contract
-item.contract_aluminium.name=Aluminium contract
-item.contract_platinum.name=Platinum contract
-item.matrix_empty.name=Empty matrix
-item.matrix_iron.name=Iron matrix
-item.matrix_gold.name=Gold matrix
-item.matrix_copper.name=Copper matrix
-item.matrix_tin.name=Tin matrix
-item.matrix_silver.name=Silver matrix
-item.matrix_lead.name=Lead matrix
-item.matrix_nickel.name=Nickel matrix
-item.matrix_aluminium.name=Aluminium matrix
-item.matrix_platinum.name=Platinum matrix
-item.element_of_air.name=Element of air
-item.element_of_darkness.name=Element of darkness
-item.element_of_earth.name=Element of earth
-item.element_of_fire.name=Element of fire
-item.element_of_light.name=Element of light
-item.element_of_water.name=Element of water
-item.elemental_core.name=Elemental core
-item.paper_sheets_blank.name=Paper sheets
-item.paper_sheets_bloody.name=Bloody paper sheets
-item.lava_block.name=Lava block
-item.rune_of_primordial_elements.name=Rune of primordial elements
-item.rune_of_season.name=Rune of seasons
-item.rune_of_mortal_sin.name=Rune of mortal sins
-item.spawnstone_unfilled.name=Unfilled scroll of summon
-item.spawnstone_blank.name=Scroll of summon: Blank
-item.spawnstone_zombie.name=Scroll of summon: Zombie
-item.spawnstone_skeleton.name=Scroll of summon: Skeleton
-item.spawnstone_wither_skeleton.name=Scroll of summon: Wither-skeleton
-item.spawnstone_spider.name=Scroll of summon: Spider
-item.spawnstone_slime.name=Scroll of summon: Slime
-item.spawnstone_magmacube.name=Scroll of summon: Magma cube
-item.spawnstone_creeper.name=Scroll of summon: Creeper
-item.spawnstone_witch.name=Scroll of summon: Witch
-item.spawnstone_shulker.name=Scroll of summon: Shulker
-item.spawnstone_pigman.name=Scroll of summon: Pigman
-item.spawnstone_enderman.name=Scroll of summon: Enderman
-item.spawnstone_ghast.name=Scroll of summon: Ghast
-item.spawnstone_blitz.name=Scroll of summon: Blitz
-item.spawnstone_blizz.name=Scroll of summon: Blizz
-item.spawnstone_blue_slime.name=Scroll of summon: Slime
-item.spawnstone_basalz.name=Scroll of summon: Basalz
-item.spawnstone_blaze.name=Scroll of summon: Blaze
-item.spawnstone_wolf.name=Scroll of summon: Wolf
-item.spawnstone_sheep.name=Scroll of summon: Sheep
-item.spawnstone_pig.name=Scroll of summon: Pig
-item.spawnstone_cow.name=Scroll of summon: Cow
-item.spawnstone_rabbit.name=Scroll of summon: Rabbit
-item.spawnstone_chicken.name=Scroll of summon: Chicken
-item.spawnstone_ocelot.name=Scroll of summon: Ocelot
-item.spawnstone_mooshroom.name=Scroll of summon: Mooshroom
-item.spawnstone_parrot.name=Scroll of summon: Parrot
-item.bottleblood_lesser.name=Lesser bottle of blood
-item.bottleblood_medium.name=Medium bottle of blood
-item.bottleblood_large.name=Large bottle of blood
+item.matrix_chard.name=Matrix Chard
+item.lava_core.name=Lava Core
+item.bloody_branch.name=Bloody Branch
+item.contract_blank.name=Blank Contract
+item.contract_iron.name=Iron Contract
+item.contract_gold.name=Gold Contract
+item.contract_copper.name=Copper Contract
+item.contract_tin.name=Tin Contract
+item.contract_silver.name=Silver Contract
+item.contract_lead.name=Lead Contract
+item.contract_nickel.name=Nickel Contract
+item.contract_aluminium.name=Aluminium Contract
+item.contract_platinum.name=Platinum Contract
+item.matrix_empty.name=Empty Matrix
+item.matrix_iron.name=Iron Matrix
+item.matrix_gold.name=Gold Matrix
+item.matrix_copper.name=Copper Matrix
+item.matrix_tin.name=Tin Matrix
+item.matrix_silver.name=Silver Matrix
+item.matrix_lead.name=Lead Matrix
+item.matrix_nickel.name=Nickel Matrix
+item.matrix_aluminium.name=Aluminium Matrix
+item.matrix_platinum.name=Platinum Matrix
+item.element_of_air.name=Element Of Air
+item.element_of_darkness.name=Element Of Darkness
+item.element_of_earth.name=Element Of Earth
+item.element_of_fire.name=Element Of Fire
+item.element_of_light.name=Element Of Light
+item.element_of_water.name=Element Of Water
+item.elemental_core.name=Elemental Core
+item.paper_sheets_blank.name=Paper Sheets
+item.paper_sheets_bloody.name=Bloody Paper Sheets
+item.lava_block.name=Lava Block
+item.rune_of_primordial_elements.name=Rune Of Primordial Elements
+item.rune_of_season.name=Rune Of Seasons
+item.rune_of_mortal_sin.name=Rune Of Mortal Sins
+item.spawnstone_unfilled.name=Unfilled Scroll Of Summon
+item.spawnstone_blank.name=Scroll Of Summon: Blank
+item.spawnstone_zombie.name=Scroll Of Summon: Zombie
+item.spawnstone_skeleton.name=Scroll Of Summon: Skeleton
+item.spawnstone_wither_skeleton.name=Scroll Of Summon: Wither-Skeleton
+item.spawnstone_spider.name=Scroll Of Summon: Spider
+item.spawnstone_slime.name=Scroll Of Summon: Slime
+item.spawnstone_magmacube.name=Scroll Of Summon: Magma Cube
+item.spawnstone_creeper.name=Scroll Of Summon: Creeper
+item.spawnstone_witch.name=Scroll Of Summon: Witch
+item.spawnstone_shulker.name=Scroll Of Summon: Shulker
+item.spawnstone_pigman.name=Scroll Of Summon: Pigman
+item.spawnstone_enderman.name=Scroll Of Summon: Enderman
+item.spawnstone_ghast.name=Scroll Of Summon: Ghast
+item.spawnstone_blitz.name=Scroll Of Summon: Blitz
+item.spawnstone_blizz.name=Scroll Of Summon: Blizz
+item.spawnstone_blue_slime.name=Scroll Of Summon: Slime
+item.spawnstone_basalz.name=Scroll Of Summon: Basalz
+item.spawnstone_blaze.name=Scroll Of Summon: Blaze
+item.spawnstone_wolf.name=Scroll Of Summon: Wolf
+item.spawnstone_sheep.name=Scroll Of Summon: Sheep
+item.spawnstone_pig.name=Scroll Of Summon: Pig
+item.spawnstone_cow.name=Scroll Of Summon: Cow
+item.spawnstone_rabbit.name=Scroll Of Summon: Rabbit
+item.spawnstone_chicken.name=Scroll Of Summon: Chicken
+item.spawnstone_ocelot.name=Scroll Of Summon: Ocelot
+item.spawnstone_mooshroom.name=Scroll Of Summon: Mooshroom
+item.spawnstone_parrot.name=Scroll Of Summon: Parrot
+item.bottleblood_lesser.name=Lesser Bottle Of Blood
+item.bottleblood_medium.name=Medium Bottle Of Blood
+item.bottleblood_large.name=Large Bottle Of Blood
+
+
+####################
+# ===: Blocks :=== #
+####################
+
+tile.factory.name=Blood Factory
+tile.factory.inventoryName=Blood Factory
 
 
 #########################
@@ -150,3 +158,8 @@ desc.spawnstone_parrot=§dPlace in the barrel with §blife essence§d, to summon
 desc.bottleblood_lesser=§dRight click to fill blood altar with §61000 §dLP
 desc.bottleblood_medium=§dRight click to fill blood altar with §63000 §dLP
 desc.bottleblood_large=§dRight click to fill blood altar with §65000 §dLP
+
+
+
+tip.factory.energy=Energy: %d / %d RF
+tip.factory.LPTank=LP: %d / %d
