remove useless classes

--- a/src/main/resources/assets/bloodybranch/lang/en_us.lang
+++ b/src/main/resources/assets/bloodybranch/lang/en_us.lang
@@ -82,7 +82,7 @@ item.bottleblood_large.name=Large Bottle Of Blood
 # ===: Blocks :=== #
 ####################
 
-tile.factory.name=Blood Factory
+tile.blood_factory.name=Blood Factory
 tile.factory.inventoryName=Blood Factory
 
 
