--- a/src/main/resources/assets/bloodybranch/lang/en_us.lang
+++ b/src/main/resources/assets/bloodybranch/lang/en_us.lang
@@ -161,5 +161,5 @@ desc.bottleblood_large=§dRight click to fill blood altar with §65000 §dLP
 
 
 
-tip.factory.energy=Energy: %d / %d RF
-tip.factory.LPTank=LP: %d / %d
+tip.factory.energy=%d / %d RF
+tip.factory.LPTank=%d / %d LP
