--- a/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
+++ b/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
@@ -76,7 +76,7 @@ item.spawnstone_parrot.name=Свиток призыва: попугай
 item.bottleblood_lesser.name=Маленький пузырёк с кровью
 item.bottleblood_medium.name=Средний пузырёк с кровью
 item.bottleblood_large.name=Большой пузырёк с кровью
-
+item.wooden_shear.name=Деревянные ножницы
 
 ###################
 # ===: Блоки :=== #
