--- a/src/main/resources/assets/bloodybranch/lang/en_us.lang
+++ b/src/main/resources/assets/bloodybranch/lang/en_us.lang
@@ -84,6 +84,7 @@ item.wooden_shear.name=Wooden shear
 
 tile.blood_factory.name=Blood Factory
 tile.factory.inventoryName=Blood Factory
+tile.factory.itemNotConsumed=Item's not consumed
 tile.bloody_fountain.name=Blood Fountain
 tile.advanced_bloody_fountain.name=Advanced Blood Fountain
 tile.bloody_altar.name=Blood Altar
@@ -100,23 +101,23 @@ desc.matrix_chard3=§bHave 25%% drop chance, when sieving sand
 desc.matrix_chard4=§bHave 20%% drop chance, when sieving dust
 desc.lava_block=§dRight click on a block to place in the world
 desc.iron_contract1=§dCombine with empty matrix
-desc.iron_contract2=§bHas 64 durability
+desc.iron_contract2=§bHas %d durability
 desc.gold_contract1=§dCombine with empty matrix
-desc.gold_contract2=§bHas 64 durability
+desc.gold_contract2=§bHas %d durability
 desc.copper_contract1=§dCombine with empty matrix
-desc.copper_contract2=§bHas 64 durability
+desc.copper_contract2=§bHas %d durability
 desc.tin_contract1=§dCombine with empty matrix
-desc.tin_contract2=§bHas 64 durability
+desc.tin_contract2=§bHas %d durability
 desc.nickel_contract1=§dCombine with empty matrix
-desc.nickel_contract2=§bHas 64 durability
+desc.nickel_contract2=§bHas %d durability
 desc.lead_contract1=§dCombine with empty matrix
-desc.lead_contract2=§bHas 64 durability
+desc.lead_contract2=§bHas %d durability
 desc.silver_contract1=§dCombine with empty matrix
-desc.silver_contract2=§bHas 64 durability
+desc.silver_contract2=§bHas %d durability
 desc.aluminium_contract1=§dCombine with empty matrix
-desc.aluminium_contract2=§bHas 64 durability
+desc.aluminium_contract2=§bHas %d durability
 desc.platinum_contract1=§dCombine with empty matrix
-desc.platinum_contract2=§bHas 16 durability
+desc.platinum_contract2=§bHas %d durability
 desc.blank_contract=§dCombine with items on alchemy table to get resource contract
 desc.empty_matrix=§dCombine with resource contract
 desc.iron_matrix=§dFill with blood to get §biron ingot
