--- a/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
+++ b/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
@@ -84,6 +84,7 @@ item.wooden_shear.name=Деревянные ножницы
 
 tile.blood_factory.name=Кровавый завод
 tile.factory.inventoryName=Кровавый завод
+tile.factory.itemNotConsumed=Предмет не расходуется
 tile.bloody_fountain.name=Кровавый фонтан
 tile.advanced_bloody_fountain.name=Улучшенный кровавый фонтан
 tile.bloody_altar.name=Кровавый алтарь
@@ -99,23 +100,23 @@ desc.matrix_chard3=§bВыпадает при просейке песка с 25%
 desc.matrix_chard4=§bВыпадает при просейке пыли с 20%% шансом
 desc.lava_block=§dНажмите ПКМ по блоку, чтобы разместить в мире
 desc.iron_contract1=§dОбъедините с пустой матрицей
-desc.iron_contract2=§bИмеет 64 прочности
+desc.iron_contract2=§bИмеет %d прочности
 desc.gold_contract1=§dОбъедините с пустой матрицей
-desc.gold_contract2=§bИмеет 64 прочности
+desc.gold_contract2=§bИмеет %d прочности
 desc.copper_contract1=§dОбъедините с пустой матрицей
-desc.copper_contract2=§bИмеет 64 прочности
+desc.copper_contract2=§bИмеет %d прочности
 desc.tin_contract1=§dОбъедините с пустой матрицей
-desc.tin_contract2=§bИмеет 64 прочности
+desc.tin_contract2=§bИмеет %d прочности
 desc.nickel_contract1=§dОбъедините с пустой матрицей
-desc.nickel_contract2=§bИмеет 64 прочности
+desc.nickel_contract2=§bИмеет %d прочности
 desc.lead_contract1=§dОбъедините с пустой матрицей
-desc.lead_contract2=§bИмеет 64 прочности
+desc.lead_contract2=§bИмеет %d прочности
 desc.silver_contract1=§dОбъедините с пустой матрицей
-desc.silver_contract2=§bИмеет 64 прочности
+desc.silver_contract2=§bИмеет %d прочности
 desc.aluminium_contract1=§dОбъедините с пустой матрицей
-desc.aluminium_contract2=§bИмеет 64 прочности
+desc.aluminium_contract2=§bИмеет %d прочности
 desc.platinum_contract1=§dОбъедините с пустой матрицей
-desc.platinum_contract2=§bИмеет 16 прочности
+desc.platinum_contract2=§bИмеет %d прочности
 desc.blank_contract=§dОбъедините с предметами на столе алхимии, чтобы получить контракт на ресурсы
 desc.empty_matrix=§dОбъедините с контрактом на ресурсы
 desc.iron_matrix=§dНаполните кровью, чтобы получить §bжелезный слиток
