--- a/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
+++ b/src/main/resources/assets/bloodybranch/lang/ru_ru.lang
@@ -28,7 +28,7 @@ item.matrix_gold.name=Золотая матрица
 item.matrix_copper.name=Медная матрица
 item.matrix_tin.name=Оловянная матрица
 item.matrix_silver.name=Серебрянная матрица
-item.matrix_lead.name=Свиноцовая матрица
+item.matrix_lead.name=Свинцовая матрица
 item.matrix_nickel.name=Никелевая матрица
 item.matrix_aluminium.name=Алюминиевая матрица
 item.matrix_platinum.name=Платиновая матрица
